--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -3,9 +3,9 @@ name: Publish Python 🐍 distributions 📦 to PyPI and TestPyPI
 on: 
   push:
     # Sequence of patterns matched against refs/heads
-    branches:    
-      # Push events on main branch
-      - "main"
+    # branches:    
+    #   # Push events on main branch
+    #   - "main"
     tags:
       # any tagged push
       - 'v*'
